--- a/moneypool/myapp/templates/suggestionResults.html
+++ b/moneypool/myapp/templates/suggestionResults.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block header %}
+
+{% endblock header %}
+
 {% block content %}
 
 <div class="grid-x grid-padding-x">
