--- a/moneypool/myapp/templates/suggestionResults.html
+++ b/moneypool/myapp/templates/suggestionResults.html
@@ -17,7 +17,7 @@
     		{% endfor %}
     	</ul>
 
-      <td><a href="/suggestions/">Vote on another suggestion?</a></td>
+      <td><a href="/tripdetails/{{question.tripId.id}}">Return to Details Page</a></td>
     </div>
   </div>
 
