Total cost and per person costs added with the help of Kaleb.

--- a/moneypool/myapp/templates/categoryPage.html
+++ b/moneypool/myapp/templates/categoryPage.html
@@ -37,6 +37,12 @@
       </div>
     </div>
     <div class="row">
+      <p class="text-center">
+        Cost:
+        {{ categoryCost }}
+      </p>
+    </div>
+    <div class="row">
         <ul>
             {%for i in qList%}
                 <a href="/displaysuggestion/{{i.id}}"><li>{{i.text}}</li></a>
