--- a/moneypool/myapp/templates/tripdetails.html
+++ b/moneypool/myapp/templates/tripdetails.html
@@ -57,6 +57,8 @@
         <p class="text-center"> Where are we going: {{title}} </p>
         <p class="text-center"> When are we going: {{date}} </p>
         <p class="text-center"> How many are going: {{attendeesCount}} </p>
+        <p class="text-center"> Total cost of the trip: {{totalCost}} </p>
+        <p class="text-center"> Total cost of the trip per person: {{ totalPerCost  }} </p>
     </div>
   </div>
   {% if attendants %}
