added a link in the trip_details navbar to return to main trip details page

--- a/moneypool/myapp/templates/categoryPage.html
+++ b/moneypool/myapp/templates/categoryPage.html
@@ -18,6 +18,7 @@
         <nav id="navbar">
           <h1 class="text-center title">{{name}} </h1>
           <ul>
+              <li><a href="/tripdetails/{{id}}">Main</a></li>
               <li><a href="/tripdetails/{{id}}/categoryPage/1">Traveling</a></li>
               <li><a href="/tripdetails/{{id}}/categoryPage/2">Housing</a></li>
               <li><a href="/tripdetails/{{id}}/categoryPage/3">Food</a></li>
