--- a/moneypool/myapp/templates/tripdetails.html
+++ b/moneypool/myapp/templates/tripdetails.html
@@ -42,6 +42,7 @@
           {% endif %}
         </h1>
           <ul>
+              <li><a href="/tripdetails/{{id}}">Main</a></li>
               <li><a href="/tripdetails/{{id}}/categoryPage/1">Traveling</a></li>
               <li><a href="/tripdetails/{{id}}/categoryPage/2">Housing</a></li>
               <li><a href="/tripdetails/{{id}}/categoryPage/3">Food</a></li>
